# glfrontend

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
data/: clean.sh  settings.ini  theme.json
data/shaders/: image.frag  image.vert  sprite.frag
data/systems/atari5200/: config.ini
data/systems/gba/: config.ini
data/systems/gcn/: config.ini
data/systems/genesis/: config.ini
data/systems/n64/: config.ini
data/systems/nes/: config.ini  theme.json
data/systems/snes/: config.ini
data/systems/wii/: config.ini
include/glad/: glad.cpp  glad.h
include/ini/: ini.cpp  ini.h
src/: main.cpp
src/arcade/: cabinet.cpp  cabinet.h  game.cpp  game.h  gamesystem.cpp  gamesystem.h  gamesystemmanager.cpp  gamesystemmanger.h  settings.cpp  settings.h
src/debug/: logger.cpp  logger.h
src/filesystem/: database.cpp  database.h  directory.cpp  directory.h  file.cpp  file.h  path.cpp  path.h
src/filesystem/database/: database.cpp  database.h
src/filesystem/database/entity/: db_entity.cpp  db_entity.h  entity_loader.cpp  entity_loader.h  game.cpp  game.h  game_system.cpp  game_system.h  texture_meta_info.cpp  texture_meta_info.h  texture_wrapper.cpp  texture_wrapper.h
src/graphics/: engine.cpp  engine.h  image.cpp  image.h  image_renderer.cpp  image_renderer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
src/graphics/drawing/: action.cpp  action.h  dimensions.cpp  dimensions.h  drawable.h  scene.cpp  scene.h  theme.cpp  theme.h  wheel.cpp  wheel.h
src/graphics/drawing/actions/: action.cpp  action.h  bgcolor_action.cpp  bgcolor_action.h  drawable_action.cpp  drawable_action.h  wheel_action.cpp  wheel_action.h
src/graphics/drawing/scenes/: bgcolor_scene.cpp  bgcolor_scene.h  (+6 more)
src/graphics/resources/: bgcolor_resource.cpp  bgcolor_resource.h  drawable_resource.cpp  drawable_resource.h  file_resource.cpp  file_resource.h  resource.cpp  resource.h  system_resource.cpp  system_resource.h  texture_resource.cpp  texture_resource.h  wheel_resource.cpp  wheel_resource.h
src/graphics/textures/: image.cpp  image.h  renderer.cpp  renderer.h  texture2d.cpp  texture2d.h
src/input/: button.cpp  button.h
src/math/: shuntingyard.cpp  shuntingyard.h
src/resources/: manager.cpp  manager.h  resourceWrapper.cpp  resourceWrapper.h
